# scopedThread

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: scopedThread.h
source/: Source.cpp
